--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,4 @@ edition = "2021"
 
 [dependencies]
 bracket-lib = "~0.8.1"
-legion = "=0.3.1"
+legion = {version = "=0.3.1", features = ["wasm-bindgen"]}
